--- a/Algorithm of MO/Algorithm of MO.csproj
+++ b/Algorithm of MO/Algorithm of MO.csproj
@@ -46,7 +46,9 @@
       <HintPath>..\..\..\JMetalCSharp.V05\JMetalCSharp\bin\Debug\log4net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
